[tool.poetry]
name = "qaspen-psycopg"
version = "0.0.7a"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <askiselev00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
psycopg = "^3.1.12"
psycopg-pool = "^3.1.8"
qaspen = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.2"
isort = "^5.12.0"
black = "^23.10.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
yesqa = "^1.5.0"
typing-extensions = "^4.8.0"
anyio = "^4.0.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
